# barstatus

./: Cargo.toml  README.md  rustfmt.toml
fonts/: Ddystopian.sfd
src/: future_to_stream.rs  lib.rs  libx11.rs  main.rs  read_line.rs  xsetroot.rs
src/emojis/: animated_emoji.rs  animated_emoji_builder.rs  mod.rs  running_cat.rs  sleeping_cat.rs
src/metrics/: battery.rs  bluetooth.rs  cpu.rs  date.rs  mem.rs  mod.rs  net.rs  update.channels.rs  update.rs  xkblayout.rs
