[package]
name = "barstatus"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
chrono = "0.4.23"
env_logger = "0.11.3"
frunk = "0.4.2"
heapless = "0.8.0"
log = "0.4.21"
memchr = "2.7.2"

[profile.release]
lto = true
strip = "debuginfo"
