[package]
name = "barstatus"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
env_logger = "0.11.3"
log = "0.4.21"
chrono = "0.4.23"
frunk = "0.4.2"
heapless = "0.8.0"
memchr = "2.7.2"
x11-dl = { version = "2.21.0", optional = true }
tokio = { version = "1.42.0", features = ["rt", "time"] }
tokio-stream = { version = "0.1.17", default-features = false, features = ["time"] }
pin-project-lite = "0.2.15"

[features]
default = ["xsetroot_dyn"]
xsetroot_dyn = ["x11-dl"]

[profile.release]
lto = true
strip = "debuginfo"
