[package]
name = "barstatus"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["clock"], default-features = false }
frunk = { version = "0.4.2", default-features = false }

env_logger = "0.11.3"
log = "0.4.21"

memchr = "2.7.2"
heapless = "0.8.0"

x11-dl = { version = "2.21.0", optional = true }

pin-project-lite = "0.2.15"
tokio = { version = "1.42.0", features = ["fs", "io-util", "process", "rt", "time"] }
tokio-stream = { version = "0.1.17", default-features = false, features = ["time"] }
thiserror = { version = "2.0.9", default-features = false }

[features]
default = ["xsetroot_dyn"]
xsetroot_dyn = ["x11-dl"]

[profile.release]
lto = true
strip = "debuginfo"

[lints.rust]
refining_impl_trait_reachable = { level = "allow", priority = 2 }

[lints.clippy]
pedantic = { level = "warn", priority = 1 }
unwrap_used = { level = "forbid", priority = 2 }
manual-async-fn = { level = "allow", priority = 2 }
cast-precision-loss = { level = "allow", priority = 2 }
cast-possible-truncation = { level = "allow", priority = 2 }
cast-sign-loss = { level = "allow", priority = 2 }
default-trait-access = { level = "allow", priority = 2 }
single-match-else = { level = "allow", priority = 2 }
cast-lossless = { level = "allow", priority = 2 }
default-constructed-unit-structs = { level = "allow", priority = 2 }
